--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>discord.gg/uaee</title>
+    <title>discord.gg/g4S8BkGyRs</title>
     <style>
         body {
             margin: 0;
@@ -11,7 +11,7 @@
             background: url('https://i.pinimg.com/originals/51/ae/a3/51aea3393b8234a1e69d8713a0a58bc3.gif') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Courier New', Courier, monospace;
-            color: #0000ff;
+            color: #ffff00; /* Changed from #0000ff to #ffff00 (yellow) */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -22,23 +22,23 @@
         .image-container img {
             width: 750px; 
             height: auto;
-            border: 2px solid #0000ff; 
+            border: 2px solid #ffff00; /* Changed from #0000ff to #ffff00 */
             border-radius: 15px;
-            box-shadow: 0 0 15px rgba(0, 0, 255, 0.7); 
+            box-shadow: 0 0 15px rgba(255, 255, 0, 0.7); /* Changed from rgba(0, 0, 255, 0.7) */
         }
         .info {
             margin-top: 20px;
             font-size: 1.5em;
-            color: #0000ff; 
-            text-shadow: 0px 0px 8px #0000ff, 0px 0px 15px #0000ff, 0px 0px 25px #0000ff; 
+            color: #ffff00; /* Changed from #0000ff to #ffff00 */
+            text-shadow: 0px 0px 8px #ffff00, 0px 0px 15px #ffff00, 0px 0px 25px #ffff00; /* Changed from blue to yellow */
             letter-spacing: 4.5px; 
             white-space: pre-wrap;
         }
         .text {
             margin-top: 20px;
             font-size: 3em; 
-            color: #0000ff; 
-            text-shadow: 0px 0px 8px #0000ff, 0px 0px 15px #0000ff, 0px 0px 25px #0000ff; 
+            color: #ffff00; /* Changed from #0000ff to #ffff00 */
+            text-shadow: 0px 0px 8px #ffff00, 0px 0px 15px #ffff00, 0px 0px 25px #ffff00; /* Changed from blue to yellow */
             letter-spacing: 4.5px; 
         }
     </style>
@@ -48,7 +48,7 @@
         <img src="https://cdn.discordapp.com/attachments/1227617921686048810/1381089868674760804/IMG_9596.png?ex=68463fac&is=6844ee2c&hm=bc6da018c22058108e13a45072f71009f6c80f4e9c266296fb7f9ae7f1329b18&" alt="Discord Image">
     </div>
     <audio autoplay loop>
-        <source src="https://drive.google.com/file/d/1jVaXkcUooNLhbcGzR8tgmAtH4NtAJjeP/view?usp=sharing" type="audio/mpeg">
+        <source src="https://c.top4top.io/m_3445txqi71.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <div class="info" id="ip-">
